psnauwaert/fix/DtoNaming&TypingFix
