# internal/dto/user_communication_service/update_user_communication_service_input.go
@@ -9,12 +9,12 @@ type UpdateUserCommunicationServiceInput struct {
 	UserCommunicationServiceID uint8                      `uri:"userCommunicationServiceId" json:"-" binding:"required"`
 	Name                       *string                    `json:"name,omitempty"`
 	Value                      *string                    `json:"value,omitempty"`
-	ServiceType                *enum.CommunicationService `json:"serviceType,omitempty"`
+	Service                    *enum.CommunicationService `json:"service,omitempty"`
 }
 
 func (u UpdateUserCommunicationServiceInput) Validate() error {
-	if u.ServiceType != nil && !enum.CommunicationService(*u.ServiceType).IsValid() {
-		return fmt.Errorf("invalid service: %s", *u.ServiceType)
+	if u.Service != nil && !enum.CommunicationService(*u.Service).IsValid() {
+		return fmt.Errorf("invalid service: %s", *u.Service)
 	}
 
 	return nil
